Add photos with all 22 players found on their site. Added an iframe and clear the contact form. Fix the text part. TO DO: fix things and clear what we don't need.

--- a/polo-master/polo-master/HTML/assets/css/style.css
+++ b/polo-master/polo-master/HTML/assets/css/style.css
@@ -436,12 +436,12 @@ a:hover {
 }
 
 .gallery-nav {
-	color: #9C1737;
+	color: #FCFFFA;
 	font-size: 2em;
 	margin: 0 1em;
 	padding: 10px 19px;
 	line-height: 0;
-	border: 1px solid #9C1737;
+	border: 1px solid #F5FDFF;
 	border-radius: 50%;
 }
 
